--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -57,9 +57,9 @@
 <script type="text/javascript">
 	got = false;
 	getMessages();
-// window.setInterval(function(){
-// 	getNewMessages();
-// }, 100);
+window.setInterval(function(){
+	getNewMessages();
+}, 800);
 window.alert = function(){};
         var defaultCSS = document.getElementById('bootstrap-css');
         function changeCSS(css){
@@ -78,10 +78,12 @@ function addSentMessage(data)
 {
 	$('chat_log').append(
 	'<div class="row msg_container base_sent"><div class="col-md-10 col-xs-10"><div class="messages msg_receive"><p>'+data+'</p></div></div></div>')
+	$(".msg_container_base").stop().animate({ scrollTop: $(".msg_container_base")[0].scrollHeight}, 1000);
 }
 function addRecievedMessage(data)
 {
 	$('chat_log').append('<div class="row msg_container base_receive"><div class="col-md-10 col-xs-10"><div class="messages msg_receive"><p>'+data+'</p></div></div></div>')
+	$(".msg_container_base").stop().animate({ scrollTop: $(".msg_container_base")[0].scrollHeight}, 1000);
 }
 $("#submit").click(
 function sendMessage(){
@@ -114,7 +116,7 @@ function getMessages(){
             data: data,
         	success: function (response) {
         		x = response;
-        		timestamp = response[response.length-1]["fields"]["order"]
+        		timestamp = response[response.length-1]["pk"]
         		got = true;
         		for (var i = 0; i < response.length; i++) {
         			if (response[i]["fields"]["sender"] == me) {
@@ -142,7 +144,10 @@ function getNewMessages(){
             data: data,
         	success: function (response) {
         		if (got == false) {return}
-        		timestamp = response[response.length-1]["fields"]["order"]
+        			if (response.length > 0) {
+		        		timestamp = response[response.length-1]["pk"]
+
+        			}
         		for (var i = 0; i < response.length; i++) {
         			if (response[i]["fields"]["sender"] == me) {
         				addSentMessage(response[i]["fields"]["text"])
